@@ -1,5 +1,10 @@
 package com.planet_ink.coffee_mud.Items.Armor;
+import java.util.ArrayList;
 import java.util.Enumeration;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.TreeMap;
 
 import com.planet_ink.coffee_mud.core.interfaces.*;
 import com.planet_ink.coffee_mud.core.*;
@@ -37,7 +42,8 @@ public class GenEarring extends GenThinArmor
 {
 	@Override public String ID(){	return "GenEarring";}
 	
-	private final String wearLoc = null;
+	private String wearLocDesc = null;
+	private final Map<Long,String> wearLocs = new TreeMap<Long,String>();
 	
 	public GenEarring()
 	{
@@ -52,25 +58,38 @@ public class GenEarring extends GenThinArmor
 		basePhyStats().setWeight(1);
 		basePhyStats().setAbility(0);
 		baseGoldValue=40;
-		layer=(short)-1;
+		layer=(short)-10;
+		layerAttributes=Armor.LAYERMASK_MULTIWEAR;
 		recoverPhyStats();
 		material=RawMaterial.RESOURCE_GOLD;
 	}
 
+	protected int numWorn(final MOB mob, long wornCode)
+	{
+		int numWorn = 0;
+		for(Item I : mob.fetchWornItems(wornCode, layer, layerAttributes))
+			if(I instanceof GenEarring)
+				numWorn++;
+		return numWorn;
+	}
+	
 	protected boolean hasFreePiercing(final MOB mob, long wornCode)
 	{
 		if(mob==null) 
 			return false;
 		final Wearable.CODES codes = Wearable.CODES.instance();
 		final String wearLocName = codes.nameup(wornCode);
+		int availablePiercings=0;
 		for(final Enumeration<MOB.Tattoo> e=mob.tattoos();e.hasMoreElements();)
 		{
 			final String tattooName=e.nextElement().tattooName.toUpperCase();
 			if(tattooName.startsWith(wearLocName+":") 
-			&& (tattooName.substring(wearLocName.length()+1).indexOf("PIERCE")<5))
-				return true;
+			&& (tattooName.substring(wearLocName.length()+1).indexOf("PIERCE")>=0))
+				availablePiercings++;
 		}
-		return false;
+		if(availablePiercings==0)
+			return false;
+		return availablePiercings > numWorn(mob,wornCode);
 	}
 	
 	protected boolean hasFreePiercingFor(final MOB mob, long wornCodes)
@@ -103,6 +122,8 @@ public class GenEarring extends GenThinArmor
 	{
 		if(!super.canWear(mob, where))
 			return false;
+		if(where==0)
+			return true;
 		return hasFreePiercingFor(mob,where);
 	}
 	
@@ -111,15 +132,84 @@ public class GenEarring extends GenThinArmor
 	{
 		long where=super.whereCantWear(mob);
 		final Wearable.CODES codes = Wearable.CODES.instance();
-		for(long code : codes.all())
-			if((code != 0)
-			&& fitsOn(code)
-			&&(code!=Item.WORN_HELD)
-			&&(!CMath.bset(where,code))
-			&&(!hasFreePiercing(mob, code)))
-				where = where | code;
+		if(where == 0)
+		{
+			for(long code : codes.all())
+				if((code != 0)
+				&& fitsOn(code)
+				&&(code!=Item.WORN_HELD)
+				&&(!CMath.bset(where,code)))
+				{
+					if(hasFreePiercing(mob, code))
+						return 0;
+					else
+						where = where | code;
+				}
+		}
 		return where;
 	}
 	
-	//TODO: wearing this should alter the name so it is clear in which piercing it is being worn
+	@Override
+	public void recoverPhyStats()
+	{
+		super.recoverPhyStats();
+		if((owner instanceof MOB)&&(!super.amWearingAt(Wearable.IN_INVENTORY)))
+		{
+			if(wearLocDesc == null)
+			{
+				synchronized(this)
+				{
+					if(wearLocDesc == null)
+					{
+						wearLocs.clear();
+						final List<String> dispWearLocs=new LinkedList<String>();
+						final MOB mob=(MOB)owner();
+						final Wearable.CODES codes = Wearable.CODES.instance();
+						final List<GenEarring> wornStuff = new ArrayList<GenEarring>(2);
+						for(final Enumeration<Item> i = mob.items(); i.hasMoreElements();)
+						{
+							final Item I=i.nextElement();
+							if((I instanceof GenEarring)
+							&& (I!=this)
+							&& (!I.amWearingAt(Item.IN_INVENTORY))
+							&& ((I.rawWornCode() & this.rawWornCode()) != 0))
+								wornStuff.add((GenEarring)I);
+						}
+						for(long wornCode : CMath.getSeperateBitMasks(myWornCode))
+						{
+							final List<String> availablePiercingsThisLoc = new ArrayList<String>(2);
+							final String wearLocName = codes.nameup(wornCode);
+							for(final Enumeration<MOB.Tattoo> e=mob.tattoos();e.hasMoreElements();)
+							{
+								final String tattooName=e.nextElement().tattooName.toUpperCase();
+								if(tattooName.startsWith(wearLocName+":") 
+								&& (tattooName.substring(wearLocName.length()+1).indexOf("PIERCE")>=0))
+									availablePiercingsThisLoc.add(tattooName.substring(wearLocName.length()+1).toLowerCase());
+							}
+							final Long wornCodeL=Long.valueOf(wornCode);
+							for(final GenEarring I : wornStuff)
+								if((I.wearLocs!=null) && ((I.rawWornCode() & wornCode)!=0) 
+								&& (I.wearLocs.containsKey(wornCodeL)))
+									availablePiercingsThisLoc.remove(I.wearLocs.remove(wornCodeL));
+							if(availablePiercingsThisLoc.size()>0)
+							{
+								final String loc=availablePiercingsThisLoc.get(0);
+								if(!CMLib.english().startsWithAnArticle(loc))
+									dispWearLocs.add("both "+loc);
+								else
+									dispWearLocs.add(loc);
+								wearLocs.put(wornCodeL, loc);
+							}
+						}
+						if(wearLocs.size() > 0)
+							wearLocDesc = " on "+CMLib.english().toEnglishStringList(dispWearLocs); 
+					}
+				}
+			}
+			if((wearLocDesc != null) && (wearLocDesc.length()>0))
+				phyStats().setName(name + wearLocDesc);
+		}
+		else
+			this.wearLocDesc = null;
+	}
 }
