@@ -33,6 +33,7 @@
   31. Lock command will now close the thing first, if it's not closed.
   32. Expanded GMCP support to include char.items package, support for mal-formed core.hello, room.wrongdir, and a few others.
   33. New Armor-Item type: StdThinArmor and GenThinArmor -- see Archon's Guide for more information
+  34. Jewelmaking can now make jewelry that Requires piercings from BodyPierce.  Works off new class GenEarring.
 # Build 5.8.2 Release 6/13/2014
    0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL to add CMCLSTS (see appropriate schema file)
    1. CM1Server has "FILE" command now for directory browsing/manipulation
